Mudança no nome do vendedor

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <tr>
                                     <th class="show992">#341</th>
                                     <td class="show576">21/05/1978</td>
-                                    <td>Anakin</td>
+                                    <td>Marcelo</td>
                                     <th class="show992">15</th>
                                     <th class="show992">11</th>
                                     <td>R$ 55300.00</td>
